sanger/sites/5locationslung/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lung-5-locations
spec:
  selector:
    matchLabels:
      app: lung-5-locations
  replicas: 1
  template:
    metadata: 
      name: lung-5-locations
      labels:
        app: lung-5-locations
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: lung-5-locations
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/5locationslung/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lung-5-locations-cxg-1
spec:
  selector:
    matchLabels:
      app: lung-5-locations-cxg-1
  replicas: 1
  template:
    metadata: 
      name: lung-5-locations-cxg-1
      labels:
        app: lung-5-locations-cxg-1
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lung-5-locations-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: lung-5-locations-cxg-1
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/lung_5loc_processed.h5ad", "--title", "5loc_diss_raw_filtered_annotated_clean", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"] #"--annotations-dir", "/data/"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "5Gi"
            cpu: 1
---
