sanger/sites/5locationslung/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lung-5-locations
  labels:
    app: lung-5-locations
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: lung-5-locations
---
apiVersion: v1
kind: Service
metadata:
  name: lung-5-locations-cxg-1
  labels:
    app: lung-5-locations-cxg-1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: lung-5-locations-cxg-1
---
