sanger/sites/5locationslung/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: lung-5-locations-cellgeni
spec:
  virtualhost:
    fqdn: 5locationslung.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: lung-5-locations
          port: 80
    - match: /static
      services:
        - name: lung-5-locations-cxg-1
          port: 80
    - match: /cxg-1
      prefixRewrite: "/" 
      services:
        - name: lung-5-locations-cxg-1
          port: 80
---
